tests/error/class-8.moc
@class Point {
    int x;
    int y;
}

-(void) x:(int)a y:(void)a {
}

@end
